[gd_scene load_steps=22 format=3 uid="uid://bjtrahwriq4km"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_4i3cb"]
[ext_resource type="Texture2D" uid="uid://dlh2pf8lf1hak" path="res://assets/sprites/moonrocks/lunar-rock-albedo.png" id="2_mrli8"]
[ext_resource type="PackedScene" uid="uid://brbcmknkw80lv" path="res://scenes/Player_Character.tscn" id="2_o05xg"]
[ext_resource type="Texture2D" uid="uid://4miqwfgjmdfu" path="res://assets/sprites/moonrocks/lunar-rock-ao.png" id="3_0vklp"]
[ext_resource type="PackedScene" uid="uid://2hwx54weg2qn" path="res://scenes/Health_pickup_node.tscn" id="3_a5dwa"]
[ext_resource type="Texture2D" uid="uid://dbw0tipxi5nuw" path="res://assets/sprites/moonrocks/lunar-rock-height-u.png" id="4_e5qxs"]
[ext_resource type="Texture2D" uid="uid://dcq1djo3cf5fl" path="res://assets/sprites/moonrocks/lunar-rock-normal-u.png" id="5_g61lp"]
[ext_resource type="Texture2D" uid="uid://brrwm35nibcdh" path="res://assets/sprites/stars.png" id="6_hry7q"]
[ext_resource type="PackedScene" uid="uid://bx70eeevo8yox" path="res://scenes/player_spawn.tscn" id="9_amu1e"]

[sub_resource type="BoxShape3D" id="BoxShape3D_o8p1f"]
size = Vector3(1, 1.50293, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n0imy"]
albedo_texture = ExtResource("2_mrli8")
normal_enabled = true
normal_texture = ExtResource("5_g61lp")
ao_enabled = true
ao_texture = ExtResource("3_0vklp")
heightmap_enabled = true
heightmap_texture = ExtResource("4_e5qxs")
uv1_scale = Vector3(20, 20, 20)

[sub_resource type="BoxMesh" id="BoxMesh_fjlom"]
material = SubResource("StandardMaterial3D_n0imy")
size = Vector3(100, 1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_6wvgb"]

[sub_resource type="BoxMesh" id="BoxMesh_rfc4f"]

[sub_resource type="BoxShape3D" id="BoxShape3D_o2gw8"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_lmlmv"]
panorama = ExtResource("6_hry7q")

[sub_resource type="Sky" id="Sky_3hl57"]
sky_material = SubResource("PanoramaSkyMaterial_lmlmv")
process_mode = 1

[sub_resource type="Environment" id="Environment_nojys"]
background_mode = 2
sky = SubResource("Sky_3hl57")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.1
volumetric_fog_density = 0.02

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iueai"]
bg_color = Color(0.36, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_giqg5"]
font_size = 40
font_color = Color(1, 0.21, 0.21, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vlfxd"]

[node name="Main" type="Node3D"]
script = ExtResource("1_4i3cb")
player_spawner = ExtResource("9_amu1e")
player_scene = ExtResource("2_o05xg")

[node name="Players" type="Node3D" parent="."]

[node name="Funnymap" type="Node3D" parent="."]

[node name="Pickups" type="Node3D" parent="Funnymap"]

[node name="HealthPickupNode" parent="Funnymap/Pickups" instance=ExtResource("3_a5dwa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6329, 8.86509, 25.3438)

[node name="HealthPickupNode2" parent="Funnymap/Pickups" instance=ExtResource("3_a5dwa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.241, 14.3512, 18.8205)

[node name="HealthPickupNode3" parent="Funnymap/Pickups" instance=ExtResource("3_a5dwa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.48349, 6.24446, -18.3248)

[node name="HealthPickupNode4" parent="Funnymap/Pickups" instance=ExtResource("3_a5dwa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.9855, 9.41549, -1.12368)

[node name="HealthPickupNode5" parent="Funnymap/Pickups" instance=ExtResource("3_a5dwa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.4763, 11.6567, -27.8728)

[node name="Floor" type="StaticBody3D" parent="Funnymap"]
disable_mode = 2
collision_layer = 15

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Floor"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, -74.65, 0)
shape = SubResource("BoxShape3D_o8p1f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Funnymap/Floor"]
mesh = SubResource("BoxMesh_fjlom")

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="Funnymap/Floor"]
layers = 1048575
size = Vector3(100, 1, 100)

[node name="Walls" type="StaticBody3D" parent="Funnymap"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Walls"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 100)
shape = SubResource("BoxShape3D_6wvgb")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Funnymap/Walls"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 100, 0, 0)
shape = SubResource("BoxShape3D_6wvgb")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Funnymap/Walls"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, -100)
shape = SubResource("BoxShape3D_6wvgb")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Funnymap/Walls"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, -100, 0, 0)
shape = SubResource("BoxShape3D_6wvgb")

[node name="Dingleobjects" type="Node3D" parent="Funnymap"]

[node name="DIngleobject2" type="StaticBody3D" parent="Funnymap/Dingleobjects"]
transform = Transform3D(7.01424, 0, 4.26332, 0, 17.8665, 0, -3.68084, 0, 8.12422, -18.9229, 5.41943, 17.4516)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Funnymap/Dingleobjects/DIngleobject2"]
mesh = SubResource("BoxMesh_rfc4f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Dingleobjects/DIngleobject2"]
shape = SubResource("BoxShape3D_o2gw8")

[node name="DIngleobject" type="StaticBody3D" parent="Funnymap/Dingleobjects/DIngleobject2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.865844, -0.303329, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Funnymap/Dingleobjects/DIngleobject2/DIngleobject"]
mesh = SubResource("BoxMesh_rfc4f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Dingleobjects/DIngleobject2/DIngleobject"]
shape = SubResource("BoxShape3D_o2gw8")

[node name="DIngleobject3" type="StaticBody3D" parent="Funnymap/Dingleobjects"]
transform = Transform3D(6.96578, 0, -4.3686, -1.57088, 16.2432, -3.36026, 3.42904, 7.44118, 7.33505, -11.8164, 5.38844, -29.1979)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Funnymap/Dingleobjects/DIngleobject3"]
mesh = SubResource("BoxMesh_rfc4f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Dingleobjects/DIngleobject3"]
shape = SubResource("BoxShape3D_o2gw8")

[node name="DIngleobject4" type="StaticBody3D" parent="Funnymap/Dingleobjects"]
transform = Transform3D(7.48216, 0, 3.01263, 0, 17.8665, 0, -2.60103, 0, 8.66619, 5.09749, -3.19417, -18.2938)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Funnymap/Dingleobjects/DIngleobject4"]
mesh = SubResource("BoxMesh_rfc4f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Dingleobjects/DIngleobject4"]
shape = SubResource("BoxShape3D_o2gw8")

[node name="DIngleobject5" type="StaticBody3D" parent="Funnymap/Dingleobjects"]
transform = Transform3D(5.6121, 0, -6.47506, 0, 17.8665, 0, 5.59039, 0, 6.50019, 27.0521, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Funnymap/Dingleobjects/DIngleobject5"]
mesh = SubResource("BoxMesh_rfc4f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Dingleobjects/DIngleobject5"]
shape = SubResource("BoxShape3D_o2gw8")

[node name="DIngleobject6" type="StaticBody3D" parent="Funnymap/Dingleobjects"]
transform = Transform3D(0.947804, 0, 9.10899, 0, 17.8665, 0, -7.86446, 0, 1.09779, 16.2794, 0, 25.0093)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Funnymap/Dingleobjects/DIngleobject6"]
mesh = SubResource("BoxMesh_rfc4f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Dingleobjects/DIngleobject6"]
shape = SubResource("BoxShape3D_o2gw8")

[node name="DIngleobject7" type="StaticBody3D" parent="Funnymap/Dingleobjects"]
transform = Transform3D(7.92137, 0, 0, 0, 17.8665, 0, 0, 0, 9.1749, 3.49553, -6.31341, 4.3707)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Funnymap/Dingleobjects/DIngleobject7"]
mesh = SubResource("BoxMesh_rfc4f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Dingleobjects/DIngleobject7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_o2gw8")

[node name="DIngleobject8" type="StaticBody3D" parent="Funnymap/Dingleobjects"]
transform = Transform3D(0.802802, -0.000252008, 9.12767, -0.940031, 17.739, 0.111047, -7.82432, -2.13122, 0.923185, -19.6085, 5.38844, -4.49187)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Funnymap/Dingleobjects/DIngleobject8"]
mesh = SubResource("BoxMesh_rfc4f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Dingleobjects/DIngleobject8"]
shape = SubResource("BoxShape3D_o2gw8")

[node name="DIngleobject9" type="StaticBody3D" parent="Funnymap/Dingleobjects"]
transform = Transform3D(5.6121, 0, -6.47506, 0, 17.8665, 0, 5.59039, 0, 6.50019, 24.6027, 4.82564, -21.2529)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Funnymap/Dingleobjects/DIngleobject9"]
mesh = SubResource("BoxMesh_rfc4f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Funnymap/Dingleobjects/DIngleobject9"]
shape = SubResource("BoxShape3D_o2gw8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Funnymap"]
transform = Transform3D(1, 0, 0, 0, -0.173648, 0.984808, 0, -0.984808, -0.173648, 0, 27.6717, 0)
shadow_enabled = true
directional_shadow_blend_splits = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Funnymap"]
environment = SubResource("Environment_nojys")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -65.5
offset_right = 44.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "join"

[node name="AdressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "localhost"
placeholder_text = "Enter adress here"
alignment = 1

[node name="GUI" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/GUI"]
z_index = 100
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -60.0
offset_right = 204.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
tooltip_text = "
"
theme_override_styles/fill = SubResource("StyleBoxFlat_iueai")
max_value = 200.0
step = 1.0
value = 200.0
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/GUI/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Healthe"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeadText" type="Label" parent="CanvasLayer/GUI/CenterContainer"]
visible = false
layout_mode = 2
text = "YOU ARE DEAD RAAAHHH!!!!!"
label_settings = SubResource("LabelSettings_giqg5")

[node name="Crosshair" type="TextureRect" parent="CanvasLayer/GUI/CenterContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_vlfxd")
stretch_mode = 5

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/Player_Character.tscn")
spawn_path = NodePath("../Players")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/hostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
